--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,6 @@ set -g default-terminal "screen-256color"
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+# highlight active pane
+set-option -g pane-active-border-fg blue
