Add tmux history limit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,6 @@ setw -g pane-base-index 1
 
 # highlight active pane
 set-option -g pane-active-border-fg blue
+
+# set history limit
+set -g history-limit 100000
