--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@ unbind C-b
 bind C-a send-prefix
 
 # fix vim tmux integraton
-set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 
 # Start windows and panes at 1, not 0
@@ -12,7 +11,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # highlight active pane
-set-option -g pane-active-border-fg blue
+set -g pane-active-border-fg blue
 
 # set history limit
 set -g history-limit 100000
