--- a/.xmobarrc
+++ b/.xmobarrc
@@ -11,7 +11,7 @@ Config {
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = "%StdinReader% }{ %multicpu% | %memory% | %dynnetwork% | %RJTT% | %date% || %kbd% "
+   , template = "%StdinReader% }{ %multicpu%|%memory%|%dynnetwork%|%UKKK%|%date%|| %kbd% "
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -38,11 +38,11 @@ Config {
    , commands =
 
         -- weather monitor
-        [ Run Weather "UKKK" [ "--template", "<skyCondition> | <fc=#4682B4><tempC></fc>°C | <fc=#4682B4><rh></fc>% | <fc=#4682B4><pressure></fc>hPa"
+        [ Run Weather "UKKK" [ "--template", "<fc=#4682B4><windMs></fc>m/s<fc=#8B0000><windCardinal></fc>|<fc=#4682B4><tempC></fc>°C|<fc=#4682B4><rh></fc>%"
                              ] 36000
 
         -- network activity monitor (dynamic interface resolution)
-        , Run DynNetwork     [ "--template" , "<dev>: <tx>kB/s|<rx>kB/s"
+        , Run DynNetwork     [ "--template" , "<dev>:<tx>kB/s<fc=red>➘</fc><rx>kB/s<fc=green>➚</fc>"
                              , "--Low"      , "1000"       -- units: B/s
                              , "--High"     , "5000"       -- units: B/s
                              , "--low"      , "darkgreen"
@@ -51,7 +51,7 @@ Config {
                              ] 10
 
         -- cpu activity monitor
-        , Run MultiCpu       [ "--template" , "Cpu: <total0>%|<total1>%"
+        , Run MultiCpu       [ "--template" , "CPU:<total0>%|<total1>|<total2>%|<total3>%|<total4>%|<total5>%|<total6>%|<total7>%"
                              , "--Low"      , "50"         -- units: %
                              , "--High"     , "85"         -- units: %
                              , "--low"      , "darkgreen"
@@ -60,7 +60,7 @@ Config {
                              ] 10
 
         -- memory usage monitor
-        , Run Memory         [ "--template" ,"Mem: <usedratio>%"
+        , Run Memory         [ "--template" ,"MEM:<usedratio>%"
                              , "--Low"      , "20"        -- units: %
                              , "--High"     , "90"        -- units: %
                              , "--low"      , "darkgreen"
@@ -70,7 +70,7 @@ Config {
 
         -- time and date indicator
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
-        , Run Date           "<fc=#ABABAB>%F (%a) %T</fc>" "date" 10
+        , Run Date           "<fc=#ABABAB>%A %F %T</fc>" "date" 10
 
         -- keyboard layout indicator
         , Run Kbd            [ ("ru"         , "<fc=#00008B>RU</fc>")
